feat: add pagination to FindReferencesTool and ListAnalysisOptionsTool
FindReferencesTool:
- Add cursor-based pagination for both "to" and "from" reference searches
- Cursor tracks source address (for TO) or target address (for FROM)
- Limits results to DEFAULT_PAGE_LIMIT per request
- Returns PaginatedResult with nextCursor for subsequent pages

ListAnalysisOptionsTool:
- Add cursor-based pagination using option name as cursor
- Maintains alphabetical ordering during pagination
- Returns PaginatedResult with nextCursor for subsequent pages

Both tools now support the standard pagination pattern used across the codebase.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>